[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sounds/open.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/themes/hint_panel_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/themes/font_12_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/themes/main_menu_button_small.tres" type="Theme" id=4]
[ext_resource path="res://src/HintPanel/HintPanel.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/button.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=3]
resource_name = "Close"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Open"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="HintPanel" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
title_label_path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/TitleLabel")
page_label_path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PageLabel")
content_container_path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContentContainer")
close_btn_path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/CloseBtn")
next_btn_path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/NextBtn")
title = "Test"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.0784314, 0.2, 0.784314 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 480, 270 )
theme = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 64.0
margin_top = 185.0
margin_right = 896.0
margin_bottom = 355.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 816.0
margin_bottom = 154.0
rect_min_size = Vector2( 800, 0 )
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 792.0
margin_bottom = 130.0
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 784.0
margin_bottom = 34.0

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 784.0
margin_bottom = 34.0
text = "TÃ­tulo"
align = 1

[node name="PageLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 8.0
margin_right = 784.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "1 / 2"
align = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 784.0
margin_bottom = 58.0

[node name="ContentContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 784.0
margin_bottom = 78.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 784.0
margin_bottom = 102.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 784.0
margin_top = 122.0
margin_right = 784.0
margin_bottom = 122.0
size_flags_horizontal = 8
custom_constants/separation = 20

[node name="NextBtn" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 107.0
margin_bottom = 31.0
theme = ExtResource( 4 )
text = "Siguiente"

[node name="CloseBtn" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_right = 82.0
margin_bottom = 31.0
theme = ExtResource( 4 )
text = "Cerrar"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 3 )
anims/Open = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="OpenSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "Sfx"

[node name="ButtonSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sfx"
